landing page redone

--- a/src/scss/javne.scss
+++ b/src/scss/javne.scss
@@ -18,6 +18,12 @@
         width: 25rem;
         height: auto;
 
+        @media screen and (max-width: 500px) {
+              
+           width: 15rem;
+            
+        }
+
     }
 
     &__text {
