--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -17,7 +17,7 @@ header {
 }
 
 .action-bar {
-    width: 100%;
+
     max-width: 117rem;
     margin: 0 auto;
     padding-top: 1rem;
@@ -29,6 +29,7 @@ header {
 .viber {
    width: 4rem;
    height: auto;
+   margin: 0 1rem;
 }
 
 .menu-icons {
@@ -57,6 +58,7 @@ nav {
 .logo {
    width: 7rem;
    height: auto;
+   margin: 0 1rem;
 }
 
 .logo i {
