--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -5,9 +5,10 @@
     padding: 0;
     box-sizing: inherit;
 }
+
 html {
     font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
-
+    overflow-x: hidden;
 }
 body {
     box-sizing: border-box;
@@ -18,6 +19,7 @@ body {
     line-height: 1.6;
     color: #0000;
     overflow-x: hidden;
+    
 
 }
 
