--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -1,13 +1,27 @@
+#landing {
+    margin-top: 15rem;
+}
+
+
 .landing {
-    background:linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.6)), url("/assets/images/landing3.jpg")center/cover fixed no-repeat;
+    
     width: 100%;
     height: 550px;
-    margin-top: 10rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
+
+    &--1 {
+        background:linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.6)), url("/assets/images/landing3.jpg")center/cover fixed no-repeat;
+    }
+    &--2 {
+        background:linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.6)), url("/assets/images/bihac2.jpg")center/cover fixed no-repeat;
+    }
+    &--3 {
+        background:linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.6)), url("/assets/images/bihac3.jpg")center/cover fixed no-repeat;
+    }
 }
 
 .landing__h1 {
