--- a/src/scss/javne.scss
+++ b/src/scss/javne.scss
@@ -1,4 +1,4 @@
-#javne {
+/* #javne {
     margin: 20rem 2rem;
 }
 
@@ -7,12 +7,33 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
+    position: relative;
+        
+
+      &__title {
+          display: flex;
+          justify-content: space-between;
+
+          &--span {
+            @media screen and (max-width: 768px) {
+                display: none !important;
+          }
+        }
+      }
      
     &__desna {
         display: flex;
         flex-direction: column;
-     
+        align-items: center;
+        justify-content: center;
+        position: relative;
+
+        &--title {
+            display: none !important;
+            @media screen and (max-width: 768px) {
+                display: block !important;
+          }
+        }
     }
     &__img {
         width: 25rem;
@@ -22,6 +43,13 @@
               
            width: 15rem;
             
+        }
+
+
+        &--kom {
+           border-radius: 50%;
+           
+          
         }
 
     }
@@ -36,7 +64,186 @@
       
        margin-top: 2rem;
        align-self: center;
-       width: 45%;
+       width: 35rem;
        text-align: center;
+       position: absolute;
+       bottom: -5rem;
+       left: 50%;
+       transform: translateX(-50%);
+    }
+} */
+
+
+.javne {
+    display: grid;
+    width: 100%;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    margin: 10rem 0 15rem 0;
+  
+    @media screen and (max-width: 900px) { 
+        margin: 25rem 0 15rem 0;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+      }
+
+
+    &__lijeva {
+        grid-row: 1 / -1;
+        grid-column: 1 / 2;
+        display: grid;
+        grid-template-rows: 10rem 1fr 1fr 5rem;
+        justify-items: center;
+        align-items: center;
+        padding: 2rem 20rem;
+        @media screen and (max-width: 1540px) {
+                  
+            padding: 2rem 10rem;
+             
+         }
+         @media screen and (max-width: 1110px) {
+                  
+            padding: 2rem 2rem;
+             
+         }
+         @media screen and (max-width: 900px) {
+                  
+            grid-row: 1 / 2;
+            grid-column: 1 / -1;
+            padding: 2rem 10rem;
+         }
+         @media screen and (max-width: 600px) {
+                  
+          
+            padding: 2rem 2rem;
+         }
+
+         @media screen and (max-width: 450px) {
+                  
+          
+            padding: 2rem 0;
+         }
+
+       
+
+        &--title {
+            grid-row:  1 / 2;
+            font-size: 2.7rem;
+            color: #194E87;
+            text-decoration: none;
+            transition: all .3s ease-in-out;
+        }
+
+        &--img {
+            width: 25rem;
+            height: auto;
+    
+            @media screen and (max-width: 500px) {
+                  
+               width: 15rem;
+                
+            }
+        }
+
+        &--text {
+            margin-top: 2rem;
+            font-size: 1.6rem;
+            text-align: justify;
+
+            @media screen and (max-width: 450px) {
+                  
+          
+                width: 80%;
+             }
+        }
+
+        &--btn {
+            width: 35rem;
+            text-align: center;
+
+            @media screen and (max-width: 450px) {
+                  
+          
+                width: 25rem;
+             }
+        }
+        
+    }
+    &__desna {
+        grid-row: 1 / -1;
+        grid-column: 2 / -1;
+        display: grid;
+        grid-template-rows: 10rem 1fr 1fr 5rem;
+        justify-items: center;
+        align-items: center;
+        padding: 2rem 20rem;
+        @media screen and (max-width: 1540px) {
+                  
+            padding: 2rem 10rem;
+             
+         }
+        @media screen and (max-width: 1110px) {
+                  
+            padding: 2rem 2rem;
+             
+         }
+         @media screen and (max-width: 900px) {
+                  
+            grid-row: 2 / -1;
+            grid-column: 1 / -1;
+            padding: 2rem 10rem;
+         }
+
+         @media screen and (max-width: 600px) {
+                  
+          
+            padding: 2rem 2rem;
+         }
+         @media screen and (max-width: 450px) {
+                  
+          
+            padding: 2rem 0;
+         }
+
+        &--title {
+            grid-row:  1 / 2;
+            font-size: 2.7rem;
+            color: #194E87;
+            text-decoration: none;
+            transition: all .3s ease-in-out;
+        }
+
+        &--img {
+            width: 25rem;
+            height: auto;
+            border-radius: 50%;
+    
+            @media screen and (max-width: 500px) {
+                  
+               width: 15rem;
+                
+            }
+        }
+
+        &--text {
+            margin-top: 2rem;
+            font-size: 1.6rem;
+            text-align: justify;
+            @media screen and (max-width: 450px) {
+                  
+          
+                width: 80%;
+             }
+        }
+
+        &--btn {
+            width: 35rem;
+            text-align: center;
+            @media screen and (max-width: 450px) {
+                  
+          
+                width: 25rem;
+             }
+        }
     }
 }
