--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -1,27 +1,26 @@
-#landing {
-    margin-top: 15rem;
-}
 
 
 .landing {
     
-    width: 100%;
-    height: 550px;
+    height: 600px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
+    
+    
 
     &--1 {
-        background:linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.6)), url("/assets/images/landing3.jpg")center/cover fixed no-repeat;
+        background:linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.6)), url("/assets/images/landing3.jpg")center/cover fixed no-repeat;    width: 100%;
     }
     &--2 {
-        background:linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.6)), url("/assets/images/bihac2.jpg")center/cover fixed no-repeat;
+        background:linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.6)), url("/assets/images/bihac2.jpg")center/cover fixed no-repeat;    width: 100%;
     }
     &--3 {
-        background:linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.6)), url("/assets/images/bihac3.jpg")center/cover fixed no-repeat;
+        background:linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.6)), url("/assets/images/bihac3.jpg")center/cover fixed no-repeat;    width: 100%;
     }
+
 }
 
 .landing__h1 {
@@ -70,3 +69,6 @@
     margin-top: 3rem;
 }
 
+.carousel-indicators .active {
+    background-color: #43BC9D;
+}
