--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -1,12 +1,10 @@
 
 header {
-    width: 100%;
-    position: absolute;
-    top:0;
-    left:0;
+
+  
      border-top: 6px solid #43BC9D;
     background: #fff;
-   
+    
 
 }
 .kontainer {
@@ -31,6 +29,26 @@ header {
    height: auto;
    margin: 0 1rem;
 }
+ 
+.searchInput {
+    width: 20rem;
+    height: 2.8rem;
+    font-size: 1.4rem;
+    border:none ;
+    outline: none !important;
+    border-bottom: 1px solid rgba(0,0,0, .1);
+}
+
+.searchInput:focus {
+    border-bottom: 1px solid #43BC9D;
+    
+}
+.searchIcon {
+    color:#43BC9D;
+    font-size: 2rem;
+    margin:0 .5rem;
+    
+}
 
 .menu-icons {
     color:#eee;
@@ -43,6 +61,10 @@ header {
     z-index: 150;
     display: none;
 
+}
+
+.ion-md-menu {
+    color: #43BC9D;
 }
 nav {
     display: flex;
