--- a/src/scss/typo.scss
+++ b/src/scss/typo.scss
@@ -20,3 +20,29 @@
     margin: .5rem 0;
     transition: all .5s linear;
 }
+
+.langSelect {
+    border: none;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-top: 1rem;
+    color:#43BC9D;
+    border-color: #43BC9D !important; 
+    outline-color: #43BC9D !important; 
+   
+
+    &__option {
+        font-weight: bold;  
+        border: none;
+    }
+    
+}
+.langSelect:focus {
+    border: none;
+}
+.langSelect:visited {
+    border: none;
+}
+.langSelect:active {
+    border: none;
+}
