--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -1,15 +1,10 @@
 
-.carousel-item {
-    min-height: 600px !important;
-    max-height: 600px !important;
-}
-.carousel-inner {
-    min-height: 600px !important;
-    max-height: 600px !important;
-}
+
 .landing {
-    
+    width: 100%;
     height: 600px;
+    margin: 0 !important;
+    padding: 0 !important;
     display: flex;
     flex-direction: column;
     align-items: center;
