--- a/src/scss/call.scss
+++ b/src/scss/call.scss
@@ -7,19 +7,14 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    @media screen and (max-width: 900px) { 
-        height: 350px;
+    @media screen and (max-width: 1106px) { 
+        height: 450px;
+        margin: 20rem 0;
       }
 
     &__viber {
         text-align: center;
-        margin-left: 25rem;
-        @media screen and (max-width: 1035px) { 
-           margin-left: 35rem;
-         }
-         @media screen and (max-width: 900px) { 
-            margin-left: 0rem;
-          }
+      
 
 
         &--text {
@@ -27,9 +22,12 @@
             font-size: 2.8rem;
             font-weight: bold;
             text-transform: uppercase;
-            @media screen and (max-width: 1035px) { 
-                font-size: 2.4rem;
-             }
+
+            @media screen and (max-width: 1440px) { 
+
+              font-size: 2.2rem;
+           }
+         
         }
     }
 
@@ -37,8 +35,7 @@
         background:linear-gradient(rgba(19, 63, 130,.6), rgba(19, 63, 130,1)), url("/assets/images/env.png")center no-repeat;
         position: absolute;
         border-radius: .5rem;
-        top: 6rem;
-        left: 10rem;
+      
         width: 30rem;
         height: 30rem;
         display: flex;
@@ -47,17 +44,38 @@
         text-align: center;
         padding: 2rem;
 
-        @media screen and (max-width: 1200px) { 
+ 
+          &--1 {
+            top: 6rem;
+            left: 10rem;
+            @media screen and (max-width: 1440px) { 
 
-           left: 3rem;
-        }
+              left: 1rem;
+           }
+   
+           @media screen and (max-width: 1106px) { 
+               top:36rem;
+               left:50%;
+               transform: translateX(-50%);
+               background:linear-gradient(rgba(19, 63, 130,1), rgba(19, 63, 130,.6)), url("/assets/images/env.png")center no-repeat;
+               border-radius: 1rem;
+             }
+   
+          }
+          &--2 {
+            top: 6rem;
+            right: 10rem;
+            @media screen and (max-width: 1440px) { 
 
-        @media screen and (max-width: 900px) { 
-            top:26rem;
+              right: 1rem;
+           }
+           @media screen and (max-width: 1106px) { 
+            top:-20rem;
             left:50%;
             transform: translateX(-50%);
-            background:linear-gradient(rgba(19, 63, 130,.1), rgba(19, 63, 130,.3)), url("/assets/images/env.png")center no-repeat;
+            background:linear-gradient(rgba(19, 63, 130,1), rgba(19, 63, 130,.6)), url("/assets/images/env.png")center no-repeat;
             border-radius: 1rem;
+          }
           }
         &--text {
             color:#fff;
