--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -25,7 +25,7 @@ header {
 
     &__icons {
         color:#43BC9D;
-        font-size: 2.5rem;
+        font-size: 2.7rem;
         text-align: center;
 
         &--icon {
@@ -48,12 +48,16 @@ header {
 }
  
 .searchInput {
-    width: 20rem;
-    height: 2.8rem;
-    font-size: 1.4rem;
+    width: 25rem;
+    height: 3.8rem;
+    font-size: 1.7rem;
     border:none ;
     outline: none !important;
     border-bottom: 1px solid rgba(0,0,0, .1);
+
+    @media screen and (max-width: 850px) {
+      display: none;
+    }
 }
 
 .searchInput:focus {
@@ -64,6 +68,9 @@ header {
     color:#43BC9D;
     font-size: 2rem;
     margin:0 .5rem;
+    @media screen and (max-width: 850px) {
+        display: none;
+      }
     
 }
 
@@ -95,9 +102,9 @@ nav {
 
 
 .logo {
-   width: 10rem;
+   width: 13rem;
    height: auto;
-   margin: 0 1rem;
+   margin-bottom: -25px;
 }
 
 .logo i {
@@ -279,7 +286,7 @@ nav {
     }
 
     .logo {
-        width: 6rem;
+        width: 10rem;
     }
     .two-level-sub-menu {
     
