--- a/src/scss/geosoft.scss
+++ b/src/scss/geosoft.scss
@@ -33,6 +33,11 @@
         padding: 0;
     }
 
+    &--javne {
+        text-align: center;
+        margin: 0 auto;
+    }
+
 }
 .geoSection__title:hover {
     color: $primaryC;
@@ -49,6 +54,12 @@
     box-shadow: 0 1.5rem 4rem rgba(#000, .20);
     transition: all .3s ease-in-out;
     margin: 1rem 0;
+
+    &--h3 {
+        padding-bottom: 1rem;
+        font-weight: bold;
+    }
+    
 }
 
 .geoSection__card--head {
@@ -78,4 +89,22 @@
 .owl-next {
     outline: none !important;
 }
+
+.geosoft_box {
+    position: relative;
+    width: 100%;
+    height: 210px;
+    padding: 40px 15px;
+    text-align: center;
+    background-color: #ffffff;
+    border: 1px solid #ffffff;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+    transition: all .3s;
+    margin: 0 .5rem;
+
+    @media screen and (max-width: 800px) {
+     height: 180px;
+     margin: 1rem .5rem;
+    }
+  }
 
