--- a/src/scss/naknada.scss
+++ b/src/scss/naknada.scss
@@ -1,6 +1,11 @@
 .naknada {
 
     &__lijeva {
+        display: flex;
+
+        @media screen and (max-width: 768px) {
+            flex-wrap: wrap;
+           }
            
         &--podnaslov {
             font-size: 1.8rem;
